Add Market Outlook page and sensitivity analysis for Monte Carlo
- Market Outlook page with live valuation indicators (CAPE, Buffett, Fed Model)
- Valuations API endpoint fetching from FRED
- Sensitivity analysis library (tornado charts, two-way tables, break-even)
- Expected return adjustments based on current valuations
- Risk/opportunity assessment engine

--- a/memory/2026-02-08.md
+++ b/memory/2026-02-08.md
@@ -98,6 +98,77 @@ Built 12 more pages:
 
 **Total new code:** ~150KB across 12 pages
 
+---
+
+## Evening Build Session - Monte Carlo Deep Upgrade
+
+Sam asked me to make the Monte Carlo "the most accurate tool out there" with continuous upgrades. Built a production-grade system:
+
+### Historical Data Layer (`/lib/historical-returns.ts`)
+- 97 years of S&P 500 annual returns (1928-2024)
+- 10-Year Treasury Bond returns (1928-2024)
+- International (EAFE) returns (1970-2024)
+- Gold returns (1972-2024)
+- REIT returns (1972-2024)
+- Bitcoin returns (2011-2024)
+- CPI inflation rates (1928-2024)
+- **Correlation matrix** between all asset classes
+- Historical drawdown periods
+
+### Monte Carlo Engine (`/lib/monte-carlo-engine.ts`)
+- **Bootstrap sampling** from actual historical returns (not random normal)
+- **Fat-tailed distributions** using Student's t-distribution for crash scenarios
+- **Correlation-aware** multi-asset simulation
+- Multiple withdrawal strategies (fixed, flexible, guardrails)
+- Glide path allocation adjustment over time
+- Social Security integration
+- Basic tax modeling (RMD, qualified vs non-qualified)
+- 1,000+ simulation runs per analysis
+
+### Stress Test System (`/lib/stress-test-scenarios.ts`)
+Historical crisis scenarios with actual asset class returns:
+- Global Financial Crisis (2007-2009)
+- COVID-19 Crash (2020)
+- Dot-Com Crash (2000-2002)
+- 2022 Bear Market
+- Black Monday 1987
+- 1973-74 Oil Crisis
+- Euro Debt Crisis (2011)
+- 1994 Rising Rates
+
+### Safe Withdrawal Rate Calculator (`/lib/safe-withdrawal.ts`)
+- Historical SWR analysis across all 97 years
+- Multiple withdrawal strategies (Fixed, Guardrails, RMD-style, Floor/Ceiling)
+- **Sequence of returns risk** visualization
+- Worst/best case historical periods identification
+
+### Valuation Indicators (`/lib/valuation-indicators.ts`)
+- CAPE ratio historical data and projections
+- Buffett Indicator (Market Cap to GDP)
+- Fed Model (earnings yield vs treasury)
+- Expected return estimation from valuations
+- Market outlook generator
+
+### New Pages:
+- `/stress-test` — Historical crisis impact analysis
+- `/safe-withdrawal` — SWR calculator with sequence risk
+- `/monte-carlo` — Upgraded with real historical data
+
+### API Endpoints:
+- `/api/historical-returns` — Fetches live data from FRED
+- `/api/monte-carlo` — Runs simulations server-side
+- `/api/valuations` — Current market valuation indicators
+
+### Commits:
+- `1b17978` - Major Monte Carlo upgrade (historical bootstrap, fat tails, correlation, stress testing)
+- `35e8b36` - Safe Withdrawal Rate calculator with sequence risk
+
+### Still TODO:
+- Integrate valuation data into Monte Carlo expected returns
+- Market Outlook page using valuation indicators
+- Real-time data refresh for historical returns
+- Sensitivity analysis visualization
+
 ## Bug Fixes
 
 ### Oracle Claude Integration
