feat: Dual-mode data provider architecture
- Created /lib/data-providers/ with mock ↔ live switching
- Types for all data domains (portfolio, fund, tax, market, economic, analyst, risk, retirement)
- Mock providers with realistic demo data (Sam's portfolio)
- React hooks (useAccounts, useFundData, useTaxLots, etc.)
- New API: /api/data-sources for transparency
- New page: /fund-xray showcasing Morningstar-style fund analysis
- Added fund-xray ToolExplainer entry
- Documentation: DATA-SOURCES.md with cost analysis and upgrade path

Architecture: Set env DATA_PROVIDER_X=live to switch from mock to live data

--- a/memory/2026-02-08.md
+++ b/memory/2026-02-08.md
@@ -260,5 +260,73 @@ Honest answer:
 
 ---
 
+## Data Provider Architecture (2:45 PM)
+
+Sam's directive: **"Set everything up to be proactive. Always make sure there's an ability to have data built in now and for a live feed of data or if you are building a simulator that we could pay up for data at some point."**
+
+### Built: Dual-Mode Data Architecture
+Created `/lib/data-providers/` — mock data now, live APIs later. One switch to swap.
+
+**Structure:**
+```
+lib/data-providers/
+├── types.ts           # All interfaces (Holding, FundData, TaxLot, etc.)
+├── index.ts           # Factory functions, config detection
+├── DATA-SOURCES.md    # Documentation + cost analysis
+└── mock/
+    ├── portfolio.ts   # Demo holdings (Sam's TAO/CIFR/IREN portfolio)
+    ├── fund.ts        # Morningstar-style fund data
+    └── tax.ts         # Tax lots with wash sale tracking
+```
+
+**Configuration via env:**
+```
+DATA_PROVIDER_PORTFOLIO=mock  # → Plaid ($500/mo)
+DATA_PROVIDER_FUND=mock       # → Morningstar ($25-50K/yr)
+DATA_PROVIDER_TAX=mock        # → Brokerage API
+DATA_PROVIDER_MARKET=live     # Yahoo/CoinGecko already live
+DATA_PROVIDER_ECONOMIC=live   # FRED already live
+```
+
+**React hooks created:**
+- `useAccounts()`, `useHoldings()`, `useTotalValue()`
+- `useFundData()`, `useFundSearch()`, `useFundComparison()`, `useFundOverlap()`
+- `useTaxLots()`, `useHarvestingOpportunities()`, `useCapitalGainsSummary()`
+- `useDataSources()` — tells components what mode they're in
+
+### New Page: Fund X-Ray (`/fund-xray`)
+Showcases the data provider pattern:
+- Search/analyze any fund (VTI, QQQ, AGTHX, etc.)
+- Morningstar-style style box visualization
+- Sector allocation chart
+- Top 10 holdings
+- Fund comparison with overlap analysis
+- "What Morningstar integration would unlock" upsell
+
+### API: `/api/data-sources`
+Returns current data source configuration — useful for debugging and transparency.
+
+### Cost Analysis (in DATA-SOURCES.md)
+| Service | Annual Cost | What You Get |
+|---------|-------------|--------------|
+| Current (free) | $0 | Yahoo, CoinGecko, FRED, FMP basic |
+| + Plaid | ~$6K/yr | Real account aggregation |
+| + Morningstar | ~$35K/yr | Fund X-ray, ratings, holdings |
+| + Bloomberg | ~$24K/yr | Terminal (if institutional) |
+
+**Recommended path:**
+1. Now: Free tiers + mock data ✅
+2. Phase 2: Add Plaid ($500/mo) for real holdings
+3. Phase 3: Evaluate Morningstar vs alternatives
+
+### Why This Matters
+- Every page can show realistic demo data
+- Flip one env var to go live
+- No code changes when upgrading data sources
+- Clear documentation of what each API unlocks
+- Cost-aware architecture from day one
+
+---
+
 ## Running Deployment
 Build in progress as of 2:40 PM...
