feat: UX improvements - keyboard shortcuts & onboarding
- Added KeyboardShortcuts component (global)
  - Cmd+K: Open Oracle
  - Cmd+/: Show all shortcuts
  - G+key: Quick navigation (d=dashboard, p=portfolio, o=oracle, etc.)
- Added QuickStartTips carousel for new users (first 5 visits)
- Tips highlight: Oracle, Thesis, Portfolio Lab, Fragility, shortcuts
- Better user onboarding experience

98 routes deployed

--- a/memory/2026-02-08.md
+++ b/memory/2026-02-08.md
@@ -379,5 +379,37 @@ He's right — most robo-advisors just run mean-variance optimization and call i
 
 ---
 
+## Integration Everywhere (3:15 PM)
+
+Sam's directive: **"Be proactive everywhere you see fit"**
+
+### ThesisInsight Component
+Created reusable component that shows quick thesis checks anywhere allocation is displayed:
+- Shows if each asset class is within our recommended range
+- Links to full Investment Thesis page
+- Compact mode for inline display, expanded mode for detail
+
+### Integrated Into:
+1. **Dashboard** — Shows thesis check under Portfolio Allocation
+2. **Portfolio Lab** — Shows before optimization suggestions (Optimize tab)
+3. **Rebalance Page** — Shows above rebalancing controls
+4. **Additional Tools** — Added Investment Thesis + Fund X-Ray cards (18 tools now)
+
+### What Users See:
+```
+📊 Thesis Check
+International (12%) is below our 15-25% target (overweight stance)
+Crypto (3.75%) is within our 3-10% target
+→ View our thesis →
+```
+
+### 98 Routes Deployed
+Including:
+- `/investment-thesis` — Full thesis explanations
+- `/fund-xray` — Morningstar-style fund analysis
+- ThesisInsight integrated throughout
+
+---
+
 ## Running Deployment
-All caught up as of 3:05 PM.
+All caught up as of 3:20 PM.
